--- a/configure.ac
+++ b/configure.ac
@@ -118,6 +118,7 @@ AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
 	src/asound/Makefile
+	src/bluealsalib/Makefile
 	utils/Makefile
 	test/Makefile])
 AC_OUTPUT
