added pkgconfig file
Signed-off-by: Thierry Bultel <thierry.bultel@iot.bzh>

--- a/configure.ac
+++ b/configure.ac
@@ -119,6 +119,7 @@ AC_CONFIG_FILES([
 	src/Makefile
 	src/asound/Makefile
 	src/bluealsalib/Makefile
+	src/bluealsalib/bluealsalib.pc
 	utils/Makefile
 	test/Makefile])
 AC_OUTPUT
