--- a/src/asound/Makefile.am
+++ b/src/asound/Makefile.am
@@ -7,6 +7,13 @@ asound_module_ctl_LTLIBRARIES = libasound_module_ctl_bluealsa.la
 asound_module_pcm_LTLIBRARIES = libasound_module_pcm_bluealsa.la
 asound_module_pcm_proxy_LTLIBRARIES = libasound_module_pcm_bluealsa_proxy.la
 
+include_HEADERS = \
+	../shared/ctl-client.h \
+	../shared/defs.h \
+	../shared/ffb.h \
+	../shared/log.h \
+	../shared/rt.h
+
 asound_module_data_DATA = 20-bluealsa.conf 20-bluealsa_proxy.conf
 
 libasound_module_ctl_bluealsa_la_SOURCES = \
@@ -24,6 +31,10 @@ libasound_module_pcm_bluealsa_proxy_la_SOURCES = \
 	../shared/log.c \
 	../shared/rt.c \
 	bluealsa-pcm-proxy.c
+
+bluezalsadir = $(libdir)/bluez-alsa
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA =bluezalsa.pc
 
 asound_module_ctldir = @ALSA_PLUGIN_DIR@
 asound_module_pcmdir = @ALSA_PLUGIN_DIR@
